--- a/node-print-server/package.json
+++ b/node-print-server/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pdf-to-printer": "^5.6.0",
-    "puppeteer": "^22.9.0",
+    "puppeteer": "24.25.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
   }
